# KKCalendarApi

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
admin/: admin.py  mixines.py  model_views.py
admin/templates/: details.html
alembic/: env.py
alembic/versions/: 2025_02_01_1805-f7adf26e627c_create_tables.py  2025_02_02_1356-3f7063c41e76_переименован_столбец_text.py  2025_02_02_1411-97e93f0b7c91_добавлены_столбцы_en_name_ru_text_en_.py  2025_02_04_1028-d261966e066f_изменена_таблица_элементов_на_сочетание_.py  2025_02_04_1134-80a68c104c53_добавлена_колонка_is_positive_в_таблицу_.py  2025_02_04_1146-8a5fe215cd3d_изменил_колонки_элементов_в_таблици_.py  2025_02_04_1410-b790b83a218b_initial_migration.py  2025_02_04_1521-72e58c39666f_создана_таблица_specialdays.py  2025_02_05_1818-dd82341d478c_удали_specialdays.py  2025_02_07_1200-1944fd85b150_вместо_description_создана_таблица_.py  2025_02_07_1236-72b5baca7b9d_удалил_descriptions.py  2025_02_08_1215-194abfa3945f_в_таблицу_events_добавлен_столбец_is_.py
api_v1/: __init__.py  mixines.py
api_v1/days_info/: crud.py  views.py
api_v1/event/: crud.py
app/: celery_worker.py  docker-compose.yml  main.py  main_app.py  mypy.ini  scheduler.py
app/.backups/: test_backup_2025-04-11_11-41-40.dump
app/actions/: create_super_user.py  create_superuser.py
app/admin/: admin.py  admin_auth.py  backend.py  custom_model_view.py  init_admin.py  mixines.py  model_views.py  user_manager_helper.py  utils.py
app/alembic/: env.py  script.py.mako
app/api/: __init__.py
app/api_v1/: __init__.py  mixines.py
app/core/: celery_worker.py  config.py  context_vars.py  custom_types.py  logger_init.py  type_vars.py
core/: config.py
database/: __init__.py  database.py  db.py  db_helper.py  schemas.py  session.py
models/: __init__.py  base.py  day_info.py  init_data.py  user.py
nginx/: nginx.conf
repositories/: day_info_repo.py  pars_class.py  user_repo.py
routers/: __init__.py  day_info_router.py
schemas/: day_info.py  types.py
utils/: translator.py
(+164 files in other folders)
